# Fin7X8Ph4Ai2

./: .gitignore  README.md  a.py  abc.txt  activate.sh  data_shifting_rough.ipynb  inference.py  main.py  pyproject.toml  repo_setup.sh  todo.txt  tree_algo.py  utils.py  visualize.ipynb
coco128_detection/yolov5s_run/: args.yaml  events.out.tfevents.1715921617.SarvagyaP.8796.0
coco128_detection/yolov5s_run2/: args.yaml
coco128_detection/yolov5s_run3/: args.yaml  events.out.tfevents.1715921914.SarvagyaP.11012.0
coco128_detection/yolov5s_run4/: args.yaml  events.out.tfevents.1715922374.SarvagyaP.13890.0
competitions/house_counting_Zindi/: a.txt  starting-notebook-for-arm-unicef-disaster-vulnerab.ipynb
configs/: 3channel_maskrcnn.yaml  inference_config.yaml  processing.yaml  trainer.yaml  unet_family.yaml
data/: data_exploration.ipynb  data_prep.ipynb  data_preparation_depth.py  data_preparation_full.py  depth_1_tree.txt  depth_2_tree.txt  run_prep.sh  testing.txt  tree_algo.py
datasets/: download.py  processing.py  reverse_dict.pkl
explorations/obj_detection/: data_shifting.py  dataset.yaml  dataset_coco128.yaml  override_config.yaml
explorations/oblique_object_detection/: yolo.py  yolo_v8n-obb
explorations/segment/: dataset.yaml  yolo.py
inference/: dataloader.py  patching_stitching.py  predict.py
obj_detection/: override_config.yaml  run.sh  yolo_v5s  yolov5.py
oblique_object_detection/: dataset.yaml  override.yaml
processing/: data_loading.py  img_preproc.py  index_calculation.py  patching.py  plot_masks.py  stitch.py  test_patching.py  utils.py
processing/detectron/: data_loading.py
segment/: override.yaml  yolo.py
submission/: pq_score_calculate.py  psr_results.csv  scores.pkl  submission.json  utils.py  validator.py
training/: callbacks.py  data_module.py  models.py  run_scheduler.sh  train_loop.py  trainer.py
training/detectron/: config.yaml  data.py  main.py  main.py.py  tutorial.ipynb
training/modelling/: models.py  modules.py
tutorials/: yolo-1-through-5-a-complete-and-detailed-overview.ipynb
(+5 files in other folders)
