[tool.poetry]
name = "computer-vision"
version = "0.1.0"
description = "implementing various object detection tasks"
authors = ["SarP2580 <sporwal1818@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
lightning = "^2.2.4"
pytorch-lightning = "^2.2.4"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
