[tool.poetry]
name = "computer-vision"
version = "0.1.0"
description = "implementing various object detection tasks"
authors = ["SarP2580 <sporwal1818@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
lightning = "^2.2.4"
pytorch-lightning = "^2.2.4"
numpy = "^1.26.4"
torch = {version = "1.10.2+cu113", source = "torch"}
torchvision = "0.11.3+cu113"
detectron2 = {git = "https://github.com/helpmefindaname/detectron2.git", rev = "main"}



[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
