[tool.poetry]
name = "computer-vision"
version = "0.1.0"
description = "implementing various object detection tasks"
authors = ["SarP2580 <sporwal1818@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
lightning = "^2.2.4"
pytorch-lightning = "^2.2.4"
numpy = "^1.26.4"
matplotlib = "^3.8.4"
opencv-python = "^4.9.0.80"
wandb = "^0.17.0"
ultralytics = "^8.2.12"
graphviz = "^0.20.3"
torchviz = "^0.0.2"
ultralytics-yolo = "^0.0.1"
torchview = "^0.2.6"
pillow = "^10.3.0"
scikit-learn = "^1.5.0"
torch = "^2.3.0"
transformers = "^4.41.1"
pycocotools = "^2.0.7"
rasterio = "^1.3.10"
geopandas = "^0.14.4"
tifffile = "^2024.6.18"
imagecodecs = "^2024.6.1"
albumentations = "^1.4.10"
segmentation-models-pytorch = "^0.3.3"
pyyaml = "^6.0.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
